components/header/header.css
/* Navbar */
.brand-logo {
  height: 100%;
}

.brand-logo > img {
  padding: 10px;
  height: 100%;
  width: auto;
}

nav {
  background: black;
  margin-top: 2%;
  margin-bottom: 2%;
  width: 90%;
  margin-left:5%;
  margin-right:5%;
}

@media only screen and (max-width:740px) {
  nav {
    background: black;
    margin-top: 2%;
    margin-bottom: 2%;
    width: 100%;
  }
}



.nav-wrapper > a
.nav-wrapper > ul > li > a {
  color: white;
}

.nav-wrapper > ul > li:hover {
  background-color: rgba(255,255,255,0.2);
}

#sidenav-overlay {
  z-index: 97;
}

.sidenav {
  background-color: black;
  max-width: 75%;
}

.sidenav li > a {
  color: white;
}

div.navbar-fixed {
  position: absolute;
  top: 0;
  left: 0;
}

.dropdown-content {
  background-color: black;
}

.dropdown-content li > a,
.dropdown-content li > span {
  color: white;
}

.dropdown-content > li:hover {
  background-color: rgba(255,255,255,0.2);
}

